# StanfordPupperASE389

./: .gitignore  CMakeLists.txt  package.xml
include/ase389/: PupperModel.h  PupperUrdfString.hpp  PupperWBC.hpp  WBCTask.hpp
launch/: load_pupper.launch
plugins/: CMakeLists.txt  pupper.cpp  pupper.hpp
pupper_description/: Joint_q_map.txt  colors.xacro  left_leg.xacro  motor.xacro  pupper.urdf  pupper.urdf.xacro  pupper_measurements  pupper_string.urdf  pupper_world.world  right_leg.xacro
pupper_description/Mesh_lab_info/: Right_side_parts
pupper_description/Pupper_STL/Body/: PCB_Board.stl
src/PupperCplusplusController/: PupperControl.cpp  PupperModel.cpp  PupperWBC.cpp  pupper_ros_node.cpp
src/StanfordQuadruped/: tempCodeRunnerFile.py
src/StanfordQuadruped/logs/: log_file.csv
